<resources>
    <string name="app_name">Brewery Controller</string>
    <string name="units_celsius">\u2103</string>
    <string name="program_default_name">Program</string>
    <string name="max_temperature_label">Max:</string>
    <string name="min_temperature_label">Min:</string>
    <string name="title_connection_setup">Connection setup</string>
    <string name="prefs_title_connection_settings">Connection settings</string>
    <string name="prefs_server_status">Server status:</string>
    <string name="prefs_server_address">Server address</string>
    <string name="prefs_server_address_description">Server IP or domain name</string>
    <string name="prefs_server_api_url_base">Server API URL</string>
    <string name="prefs_server_api_url_base_description">Server\'s API URL base</string>
    <string name="prefs_server_port">Server port</string>
    <string name="prefs_server_port_description">Server listening port</string>
    <string name="button_retry">Retry</string>
    <string name="button_settings">Settings</string>
    <string name="program_details_label_therm_sensor">Therm Sensor</string>
    <string name="program_details_label_heating_relay_index">Heating relay</string>
    <string name="program_details_heating_relay_not_available">Heating device not available</string>
    <string name="program_details_label_cooling_relay_index">Cooling relay</string>
    <string name="program_details_cooling_relay_not_available">Cooling device not available</string>
    <string name="program_details_button_edit">Edit Program</string>
    <string name="program_details_button_back">Back</string>
    <string name="program_details_program_active">Program is running</string>
    <string name="program_details_program_inactive">Program is stopped</string>
    <string name="program_details_program_saved_successfully">Program saved</string>
    <string name="program_details_program_deleted_successfully">Program deleted</string>
    <string name="program_details_program_update_error">Error while saving program!</string>
    <string name="program_details_sensors_fetch_error">Error while fetching sensors!</string>
    <string name="program_details_program_delete_error">Can\'t delete the program!</string>
    <string name="program_details_program_refresh_error">Program refresh problem</string>
    <string name="program_edit_label_program_name">Program name</string>
    <string name="program_edit_label_temperature">Temperature</string>
    <string name="program_edit_label_max_temp">Max temperature</string>
    <string name="program_edit_label_max_temp_short">Max</string>
    <string name="program_edit_label_min_temp">Min temperature</string>
    <string name="program_edit_label_min_temp_short">Min</string>
    <string name="program_edit_label_therm_sensor">Temperature Sensor</string>
    <string name="program_edit_label_heating_relay_index">Heating relay</string>
    <string name="program_edit_label_cooling_relay_index">Cooling relay</string>
    <string name="program_edit_label_program_active">Program active</string>
    <string name="program_edit_button_back">Back</string>
    <string name="program_edit_button_save">Save program</string>
    <string name="program_edit_name_hint">eg. American Pale Ale</string>
    <string name="program_edit_max_temp_default" translatable="false">18.0</string>
    <string name="program_edit_min_temp_default" translatable="false">17.0</string>
    <string name="programs_button_add_program">Add Program</string>
    <string name="programs_error_title_cant_connect_server">Failed to connect to server</string>
    <string name="programs_error_message_connection_setup_missing">Server connection is not configured. Go to settings and provide the server data.</string>
    <string name="programs_error_message_connection_timeout">Check the server configuration and make sure you have access to it in this network. The server you configured may also be turned off.</string>
    <string name="programs_error_retry_button">Retry</string>
    <string name="programs_error_navigation_button_connection_settings">Settings</string>
    <string name="program_edit_title">Program Edit</string>
    <string name="program_edit_relay_display_string" formatted="false">Relay %1$d</string>
    <string name="program_edit_no_relay_used">Not used</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete_program">Delete program</string>
    <string name="screen_title_programs">Programs</string>
    <string name="screen_title_settings">Settings</string>
    <string name="screen_title_program_edit">Edit Program</string>
    <string name="screen_title_program_details">Program Details</string>
    <string name="confirmation_delete_program_ok">Delete Program</string>
    <string name="confirmation_delete_program_cancel">Cancel</string>
    <string name="confirmation_delete_program_message">Are you sure you want to delete this program?</string>
    <string name="confirmation_delete_program_title">Delete program</string>
    <string name="response_error_generic">Error code: %1$s</string>
    <string name="response_error_invalid_id">Program not found</string>
    <string name="response_error_invalid_operation">Invalid operation</string>
    <string name="response_error_invalid_relay">Invalid relay number</string>
    <string name="response_error_invalid_sensor">Sensor not found</string>
    <string name="response_error_heating_relay_in_use">Heating relay already in use by other program</string>
    <string name="response_error_cooling_relay_in_use">Cooling relay already in use by other program</string>
    <string name="response_error_sensor_in_use">Sensor already used by other program</string>
    <string name="response_error_min_temp_higher_than_max">Min temperature is higher than max temperature</string>
    <string name="response_error_store_programs">Unable to store programs</string>
    <string name="response_error_load_programs">Unable to load programs</string>
</resources>
