<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
                name="viewModel"
                type="com.pma.bcc.viewmodels.ProgramDetailsViewModel" />
    </data>

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.pma.bcc.fragments.ProgramDetailsFragment"
        android:padding="5dp"
        android:paddingTop="10dp">

    <include
            android:id="@+id/program_card"
            layout="@layout/program_grid_item" />

    <androidx.cardview.widget.CardView
            android:id="@+id/program_active_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:layout_constraintTop_toBottomOf="@id/program_card" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

            <TextView
                    android:id="@+id/text_program_active"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{viewModel.programIsActiveText}"
                    tools:text="@string/program_details_program_active"/>

            <ProgressBar
                    android:id="@+id/progress_program_active_updating"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginLeft="20dp"
                    android:indeterminate="true"
                    android:visibility="@{viewModel.programIsActiveUpdating ? View.VISIBLE : View.INVISIBLE}"
                    />

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_program_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="@{viewModel.programIsActive}"
                    android:enabled="@{!viewModel.programIsActiveUpdating}"
                    android:onCheckedChanged="@{() -> viewModel.toggleProgramActive()}"/>
                    tools:checked="true"
                    />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/program_properties_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:layout_constraintTop_toBottomOf="@id/program_active_card" >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

            <TextView
                    android:id="@+id/text_sensor_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_details_label_therm_sensor" />

            <TextView
                    android:id="@+id/text_sensor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.sensor}"
                    tools:text="1234567890abc"
                    style="@style/TextStylePropertyValueMonospace"/>

            <TextView
                    android:id="@+id/text_heating_relay_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/program_details_label_heating_relay_index" />

            <TextView
                    android:id="@+id/text_heating_relay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.heatingRelay}"
                    tools:text="1"
                    style="@style/TextStylePropertyValueMonospace"/>

            <TextView
                    android:id="@+id/text_cooling_relay_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/program_details_label_cooling_relay_index" />

            <TextView
                    android:id="@+id/text_cooling_relay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.coolingRelay}"
                    tools:text="2"
                    style="@style/TextStylePropertyValueMonospace"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:id="@+id/button_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/program_properties_card">

        <Button
                android:id="@+id/button_back"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/program_details_button_back"
                android:onClick="@{viewModel.onClickBack}" />

        <Button
                android:id="@+id/button_edit_program"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/program_details_button_edit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:onClick="@{viewModel.onClickEdit}" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>